feat: add experimental chat widget for authenticated users with local chatbot integration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!-- App root: all routed content will be rendered here -->
 <router-outlet></router-outlet>
 
+<!-- Global floating chat widget for authenticated users -->
+<app-chat-widget></app-chat-widget>
+
